namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-electronic-monitoring-person-match-preprod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-electronic-monitoring-person-match-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preproduction"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "em-engineers-moj-madetech"
    cloud-platform.justice.gov.uk/slack-alert-channel: "electronic-monitoring-data-hub-preprod-notifications"
    cloud-platform.justice.gov.uk/application: "Electronic Monitoring Data Person Match"
    cloud-platform.justice.gov.uk/owner: "HMPPS Electronic Monitoring Data Store: EMDataEngineering@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/electronic-monitoring-data-ingestion.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-electronic-monitoring-data-store"
